--- a/.env.sample
+++ b/.env.sample
@@ -1,32 +1,213 @@
-# Sample Environment File for Stock Scanner
+# Sample Environment File for Stock Scanner Django Application
+# Copy this file to .env and update with your actual values
 
-# Django Configuration
-SECRET_KEY=test-secret-key-change-in-production
+# ============================================================================
+# DJANGO CORE CONFIGURATION
+# ============================================================================
+
+# Django Secret Key (CRITICAL: Change in production!)
+SECRET_KEY=test-secret-key-change-in-production-MUST-BE-UNIQUE
+
+# Debug Mode (False for production)
 DEBUG=True
+
+# Admin URL Path (change for security)
 ADMIN_URL=admin
 
-# Database Configuration (Local SQLite)
+# Time Zone
+TIME_ZONE=UTC
+
+# Language Code
+LANGUAGE_CODE=en-us
+
+# ============================================================================
+# DATABASE CONFIGURATION (SQLite - Local Development)
+# ============================================================================
+
+# Database Type (sqlite3 for local development)
 DB_TYPE=sqlite3
 DB_NAME=stock_scanner.db
 DB_PATH=./stock_scanner.db
 
-# Email Configuration (Gmail)
+# Database Optimization Settings
+SQLITE_JOURNAL_MODE=WAL
+SQLITE_CACHE_SIZE=2000
+SQLITE_SYNCHRONOUS=NORMAL
+
+# ============================================================================
+# EMAIL CONFIGURATION (Gmail SMTP)
+# ============================================================================
+
+# Gmail SMTP Settings
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_USE_SSL=False
+
+# Gmail Authentication (Use App Password, not regular password!)
 EMAIL_HOST_USER=noreply.retailtradescanner@gmail.com
 EMAIL_HOST_PASSWORD=mzqmvhsjqeqrjmjv
+
+# Email Addresses
+DEFAULT_FROM_EMAIL=Stock Scanner <noreply.retailtradescanner@gmail.com>
 ADMIN_EMAIL=noreply.retailtradescanner@gmail.com
 
-# Site Configuration
+# Email Rate Limiting (Gmail quotas)
+EMAIL_RATE_LIMIT_HOUR=250
+EMAIL_RATE_LIMIT_DAY=500
+EMAIL_DELAY_SECONDS=1
+
+# ============================================================================
+# SITE CONFIGURATION
+# ============================================================================
+
+# Site URL (update for production)
 SITE_URL=http://localhost:8000
+SITE_NAME=Stock Scanner
+
+# Allowed Hosts (add your domain for production)
 ALLOWED_HOSTS=localhost,127.0.0.1
 
-# Stock API Configuration
+# CORS Settings (for WordPress integration)
+CORS_ALLOWED_ORIGINS=http://localhost:8000,http://127.0.0.1:8000
+
+# ============================================================================
+# STOCK API CONFIGURATION (yfinance)
+# ============================================================================
+
+# Use yfinance exclusively (recommended)
 USE_YFINANCE_ONLY=True
+
+# Rate Limiting (seconds between requests)
 STOCK_API_RATE_LIMIT=1.0
+
+# Cache Duration (seconds)
 YFINANCE_CACHE_DURATION=300
 
-# Security Settings (Development)
+# Request Settings
+YFINANCE_MAX_RETRIES=3
+YFINANCE_RETRY_DELAY=2.0
+YFINANCE_TIMEOUT=30
+YFINANCE_MAX_CONCURRENT=5
+
+# ============================================================================
+# SECURITY SETTINGS (Development)
+# ============================================================================
+
+# SSL/HTTPS Settings (True for production)
 SECURE_SSL_REDIRECT=False
 SESSION_COOKIE_SECURE=False
 CSRF_COOKIE_SECURE=False
+SECURE_HSTS_SECONDS=0
+
+# Session Settings
+SESSION_COOKIE_AGE=86400
+SESSION_SAVE_EVERY_REQUEST=False
+
+# ============================================================================
+# LOGGING CONFIGURATION
+# ============================================================================
+
+# Log Level (DEBUG, INFO, WARNING, ERROR, CRITICAL)
+LOG_LEVEL=INFO
+
+# Log File Paths
+LOG_FILE_PATH=./logs/stock_scanner.log
+ERROR_LOG_PATH=./logs/errors.log
+
+# ============================================================================
+# CACHE CONFIGURATION
+# ============================================================================
+
+# Cache Backend (locmem for development)
+CACHE_BACKEND=django.core.cache.backends.locmem.LocMemCache
+CACHE_LOCATION=stock-scanner-cache
+CACHE_TIMEOUT=300
+
+# ============================================================================
+# API CONFIGURATION
+# ============================================================================
+
+# API Rate Limiting
+API_RATE_LIMIT=100
+API_RATE_LIMIT_PERIOD=hour
+
+# API Throttling
+API_THROTTLE_ANON=10/minute
+API_THROTTLE_USER=60/minute
+
+# ============================================================================
+# WORDPRESS INTEGRATION
+# ============================================================================
+
+# WordPress Site URL (if using WordPress integration)
+WORDPRESS_SITE_URL=https://your-wordpress-site.com
+
+# WordPress API Authentication
+WORDPRESS_API_USER=api_user
+WORDPRESS_API_KEY=your_wordpress_api_key
+
+# ============================================================================
+# MONITORING & HEALTH CHECKS
+# ============================================================================
+
+# Health Check Endpoints
+HEALTH_CHECK_ENABLED=True
+HEALTH_CHECK_URL=/health/
+
+# Performance Monitoring
+PERFORMANCE_MONITORING=False
+
+# ============================================================================
+# DEVELOPMENT SETTINGS
+# ============================================================================
+
+# Django Extensions (for development)
+DJANGO_EXTENSIONS_ENABLED=True
+
+# Debug Toolbar (for development)
+DEBUG_TOOLBAR_ENABLED=False
+
+# Test Settings
+TESTING_MODE=False
+TEST_DATABASE_NAME=test_stock_scanner.db
+
+# ============================================================================
+# PRODUCTION OVERRIDES (uncomment for production)
+# ============================================================================
+
+# DEBUG=False
+# SECURE_SSL_REDIRECT=True
+# SESSION_COOKIE_SECURE=True
+# CSRF_COOKIE_SECURE=True
+# SECURE_HSTS_SECONDS=31536000
+# SECURE_CONTENT_TYPE_NOSNIFF=True
+# SECURE_BROWSER_XSS_FILTER=True
+# X_FRAME_OPTIONS=DENY
+
+# ============================================================================
+# NOTES
+# ============================================================================
+# 
+# 1. Gmail App Password Setup:
+#    - Enable 2FA on your Google account
+#    - Go to Security > App passwords
+#    - Generate password for "Mail" application
+#    - Use generated password in EMAIL_HOST_PASSWORD
+#
+# 2. Security Notes:
+#    - Change SECRET_KEY before production deployment
+#    - Use environment-specific .env files
+#    - Never commit .env files to version control
+#
+# 3. Database Notes:
+#    - SQLite is perfect for single-user applications
+#    - Automatic backups are created before migrations
+#    - Database file is portable across systems
+#
+# 4. Stock Data Notes:
+#    - yfinance is free but rate-limited
+#    - Caching reduces API calls significantly
+#    - Rate limiting prevents IP blocking
+#
+# ============================================================================
