--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ cryptography==44.0.0
 cssselect==1.2.0
 DateTime==5.5
 Django>=5.0
+django-celery-beat==2.5.0
+celery==5.3.4
 defusedxml==0.7.1
 distro==1.5.0
 docker==7.1.0
