--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=https://finance-scanner-7.preview.emergentagent.com
+REACT_APP_BACKEND_URL=https://stock-scanner-clone.preview.emergentagent.com
 WDS_SOCKET_PORT=443
