--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-REACT_APP_BACKEND_URL=https://stock-tracker-158.preview.emergentagent.com
+REACT_APP_BACKEND_URL=https://stock-scanner-15.preview.emergentagent.com
 WDS_SOCKET_PORT=443
 REACT_APP_API_PASSWORD="((#cx+mb@f-(8x*p@9mfnanqe%ha1@6-b%w)q##v@)lanop"
