--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
 # Backend API Configuration
-REACT_APP_BACKEND_URL=https://api.retailtradescanner.com
+REACT_APP_BACKEND_URL=https://equity-tracker-10.preview.emergentagent.com
 REACT_APP_API_PASSWORD="((#cx+mb@f-(8x*p@9mfnanqe%ha1@6-b%w)q##v@)lanop"
 REACT_APP_PAYPAL_CLIENT_ID=sb-your-client-id
 
