--- a/frontend/public/.htaccess
+++ b/frontend/public/.htaccess
@@ -4,6 +4,7 @@ Options -MultiViews
 
 <IfModule mod_rewrite.c>
   RewriteEngine On
+  RewriteBase /
 
   # Serve existing files and directories
   RewriteCond %{REQUEST_FILENAME} -f [OR]
@@ -16,6 +17,9 @@ Options -MultiViews
   # SPA fallback to index.html
   RewriteRule . index.html [L]
 </IfModule>
+
+# Fallback for SPA routes (Apache 2.4+)
+FallbackResource /index.html
 
 DirectoryIndex index.html
 
@@ -57,7 +61,7 @@ DirectoryIndex index.html
 # Content Security Policy (deliver via headers, not meta)
 # Note: 'frame-ancestors' must be sent as a header to be respected
 <IfModule mod_headers.c>
-  Header always set Content-Security-Policy "default-src 'self'; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; connect-src 'self' https://api.retailtradescanner.com https://www.paypal.com https://*.paypal.com https://o.sentry.io https://ingest.sentry.io https://plausible.io https://events.plausible.io; script-src 'self' https://www.paypal.com https://www.paypalobjects.com https://plausible.io; img-src 'self' data: https:; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com data:; frame-src https://www.paypal.com https://*.paypal.com"
+  Header always set Content-Security-Policy "default-src 'self'; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; connect-src 'self' https://api.retailtradescanner.com https://www.paypal.com https://*.paypal.com https://o.sentry.io https://ingest.sentry.io https://plausible.io https://events.plausible.io https://fonts.googleapis.com https://fonts.gstatic.com https://query1.finance.yahoo.com https://query2.finance.yahoo.com; script-src 'self' https://www.paypal.com https://www.paypalobjects.com https://plausible.io; img-src 'self' data: https:; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com data:; frame-src https://www.paypal.com https://*.paypal.com"
 </IfModule>
 
 # Serve offline page for true 404s (keeps SPA fallback returning 200)
