--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "homepage": "/",
   "engines": {
-    "node": ">=18 <20",
+    "node": ">=18",
     "npm": ">=8"
   },
   "dependencies": {
