--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-REACT_APP_BACKEND_URL=https://ui-nav-checkout-fix.preview.emergentagent.com
+REACT_APP_BACKEND_URL=https://findata-hub-7.preview.emergentagent.com
 WDS_SOCKET_PORT=443
 REACT_APP_API_PASSWORD=dummy_password_for_testing
