--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=https://api.retailtradescanner.com
+REACT_APP_BACKEND_URL=https://header-nav-fixes.preview.emergentagent.com
 WDS_SOCKET_PORT=443
