--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ temp_repo/.git/objects/pack/pack-d71ffe611651d51ce8205bb6424650ac674b34f9.pack
 frontend/node_modules/.cache/default-development/1.pack
 frontend/node_modules/.cache/default-development/2.pack
 frontend/node_modules/.cache/default-development/3.pack
+frontend/node_modules/.cache/default-development/4.pack
