--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,122 @@
-MONGO_URL="mongodb://localhost:27017"
-DB_NAME="test_database"
-CORS_ORIGINS="*"
+
+# =============================================================================
+# STOCK SCANNER ENVIRONMENT CONFIGURATION (DUAL DB: default + stocks)
+# =============================================================================
+DJANGO_SETTINGS_MODULE=stockscanner_django.settings_production
+DJANGO_DEBUG=False
+ENVIRONMENT=production
+
+# Hosts / Frontend
+DJANGO_SECRET_KEY="((#cx+mb@f-(8x*p@9mfnanqe%ha1@6-b%w)q##v@)lanop"
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,retailtradescannet.com,api.retailtradescannet.com,tradescanpro.com,www.tradescanpro.com
+FRONTEND_URL=https://tradescanpro.com
+WORDPRESS_URL=https://retailtradescanner.com
+CSRF_TRUSTED_ORIGINS=https://api.retailtradescanner.com,https://tradescanpro.com,https://www.tradescanpro.com
+PRIMARY_ORIGIN=https://tradescanpro.com
+
+# Database (default) - Local single DB (root/no password)
+DB_ENGINE=django.db.backends.mysql
+DB_HOST=127.0.0.1
+DB_NAME=stockscanner
+DB_USER=root
+DB_PASSWORD=
+DB_PORT=3306
+CONN_MAX_AGE=0
+
+# Stocks Database (secondary) - DISABLED for single local DB
+# DB2_ENGINE=django.db.backends.mysql
+# DB2_HOST=127.0.0.1
+# DB2_NAME=stocks
+# DB2_USER=root
+# DB2_PASSWORD=
+# DB2_PORT=3306
+# DB2_CONN_MAX_AGE=0
+
+# Cache (no Redis)
+CACHE_BACKEND=locmem
+
+# Celery
+CELERY_ENABLED=true
+CELERY_BROKER_URL=amqp://guest:guest@localhost:5672//
+CELERY_RESULT_BACKEND=rpc://
+CELERY_TASK_TIME_LIMIT=600
+CELERY_WORKER_CONCURRENCY=2
+
+# PayPal (live)
+PAYPAL_MODE=live
+PAYPAL_ENV=live
+PAYPAL_CLIENT_ID=AQLxJ2PTOCLuWEzPWRKF3GP-DMl1jbmLMsjk-xu8FqtqJsaXjO36uVX9wOefiewqWzC7_jXkbDyDw2SK
+PAYPAL_CLIENT_SECRET="EBz7lzVK6akwzzRLbmNEPdWbUVA19ihnW194xHOR--dE7EJY7NQo1kMo7JMztwrwNpMGd8CA9LrH68UJ"
+PAYPAL_SECRET="EBz7lzVK6akwzzRLbmNEPdWbUVA19ihnW194xHOR--dE7EJY7NQo1kMo7JMztwrwNpMGd8CA9LrH68UJ"
+PAYPAL_WEBHOOK_URL=https://tradescanpro.com/checkout/stock-scanner/v1/paypal-webhook
+PAYPAL_RETURN_URL=https://tradescanpro.com/membership-success/
+PAYPAL_CANCEL_URL=https://tradescanpro.com/membership-cancel/
+PAYPAL_IPN_VERIFY=True
+
+# Pricing
+BRONZE_MONTHLY_PRICE=24.99
+BRONZE_ANNUAL_PRICE=254.99
+SILVER_MONTHLY_PRICE=49.99
+SILVER_ANNUAL_PRICE=509.99
+GOLD_MONTHLY_PRICE=79.99
+GOLD_ANNUAL_PRICE=814.99
+FREE_TRIAL_DAYS=7
+TRIAL_ENABLED=True
+
+# Email (SMTP)
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_USE_SSL=False
+EMAIL_HOST_USER=noreply.retailtradescanner@gmail.com
+EMAIL_HOST_PASSWORD="mzqmvhsjqeqrjmjv"
+DEFAULT_FROM_EMAIL="Stock Scanner <noreply.retailtradescanner@gmail.com>"
+SERVER_EMAIL="Stock Scanner Server <noreply.retailtradescanner@gmail.com>"
+ADMIN_EMAIL=admin@retailtradescanner.com
+
+# API/data
+YFINANCE_RATE_LIMIT=0.25
+YFINANCE_TIMEOUT=15
+YFINANCE_RETRIES=3
+FINNHUB_API_KEYS=
+ALPHA_VANTAGE_API_KEY=
+
+# Proxies
+USE_PROXIES=True
+PROXY_FILE=working_proxies.json
+PROXY_TIMEOUT=10
+PROXY_ROTATION_ENABLED=True
+
+# Market hours
+MARKET_OPEN=09:30
+MARKET_CLOSE=16:00
+SCAN_ENABLED=True
+SCAN_PREMARKET=False
+SCAN_POSTMARKET=False
+STOCK_RETRIEVAL_INTERVAL=3
+NEWS_SCRAPER_INTERVAL=5
+EMAIL_SENDER_INTERVAL=5
+
+# Security / throttling
+LOG_FORMAT=default
+LOG_LEVEL=INFO
+SESSION_COOKIE_SECURE=True
+SESSION_COOKIE_HTTPONLY=True
+SESSION_COOKIE_SAMESITE='None'
+CSRF_COOKIE_SECURE=True
+CSRF_COOKIE_HTTPONLY=True
+CSRF_COOKIE_SAMESITE='None'
+SECURE_SSL_REDIRECT=True
+SECURE_HSTS_SECONDS=31536000
+SECURE_HSTS_INCLUDE_SUBDOMAINS=True
+SECURE_HSTS_PRELOAD=True
+SECURE_CONTENT_TYPE_NOSNIFF=True
+X_FRAME_OPTIONS=DENY
+RATE_LIMIT_FREE_USERS=100
+RATE_LIMIT_AUTHENTICATED_USERS=1000
+RATE_LIMIT_WINDOW=3600
+
+# Observability (optional)
+SENTRY_DSN=
+SENTRY_TRACES_SAMPLE_RATE=0
