--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,5 @@ ht_*.log
 !PACKAGE_MANIFEST.md
 !INSTALLATION_CHECKLIST.md
 frontend/node_modules/.cache/default-development/0.pack
+frontend/node_modules/.cache/default-development/2.pack
+frontend/node_modules/.cache/default-development/1.pack
