--- a/frontend/.env
+++ b/frontend/.env
@@ -2,7 +2,7 @@
 # Development Configuration
 
 # Backend API base URL
-REACT_APP_BACKEND_URL=http://localhost:8001
+REACT_APP_BACKEND_URL=https://stock-mvp-fork.preview.emergentagent.com
 
 # Public site URL
 REACT_APP_PUBLIC_URL=http://localhost:3000
